2011-08-17  Sam Steingold  <sds@gnu.org>

	* configure.in: check for many more windows headers which might
	declare NtQueryInformationFile
	* win32.d: try to include all those header one by one
	Suggested by Michael Kappert & Yaroslav Kavenchuk
	<http://article.gmane.org/gmane.lisp.clisp.devel:22684> &c

2011-08-08  Sam Steingold  <sds@gnu.org>

	* spvw_mmap.d (munmap, mprotect) [HAVE_MACH_VM|HAVE_WIN32_VM]:
	declare when defined to avoid a "warning: no previous declaration"

2011-08-08  Sam Steingold  <sds@gnu.org>

	Rename errno_t to os_error_code_t to avoid a conflict with mingw
	* unix.d (os_error_code_t): typedef to int; replaces errno_t
	* win32.d (os_error_code_t): typedef to DWORD; replaces errno_t
	* unixaux.d, win32aux.d (namestring_file_id, handle_file_id):
	return os_error_code_t instead of errno_t
	* pathname.d (check_file_reopen): update for the new type name

2011-08-08  Sam Steingold  <sds@gnu.org>

	* configure.in: check for <winternl.h>, <ntstatus.h> and <ddk/winddk.h>
	* win32.d: include them only when detected (the first two on
	cygwin/mingw, the last one on msys/mingw)

2011-08-05  Sam Steingold  <sds@gnu.org>

	fix the 2011-03-31 fix for bug#1731469
	* loop.lisp (*nullvar*): new unbound global
	(destructure): use it instead of (helpvar 0) for null patters
	(expand-loop): bind it; repeat count var does not depend on preceding
	(expand-loop@note-initialization): do not barf on *nullvar* reuse

2011-08-03  Sam Steingold  <sds@gnu.org>

	fix bug#3384698: loop does not warn on REPEAT before FOR
	* loop.lisp (expand-loop): REPEAT is a TERMINATION-TEST
	which is a MAIN-CLAUSE, not a VARIABLE-CLAUSE

2011-08-03  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (check_errno): add ERFKILL & EHWPOISON

2011-08-02  Sam Steingold  <sds@gnu.org>

	fix bug#3384693: no warning when lambda is incompatible with arglist
	* compiler.lisp (inline-callable-function-lambda-p): call c-warn
	when the lambdalist is incompatible with the argument count
